--- a/assets/style.css
+++ b/assets/style.css
@@ -93,15 +93,17 @@ main h3 {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 10px;
+    margin-top: 50px;
+    margin: auto;
+
 }
 
 /*sets main about me section*/
 #about-me {
-    height: 800px;
+    min-height: 800px;
     border-style: solid;
     border-color: limegreen;
-    margin-top: 50px;
+    margin-top: 70px;
     padding: 120px 0;
     display: flex;
     flex-direction: column;
@@ -112,6 +114,8 @@ main h3 {
     justify-self: left;
     padding: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 /*sets about me image*/
@@ -121,6 +125,7 @@ main h3 {
     padding: 5px;
     border: 2px solid limegreen;
     margin-bottom: 10px;
+    
 }
 
 /*sets container for portfolio*/
@@ -161,6 +166,7 @@ main h3 {
     padding: 5px;
 }
 
+
 /*sets my other application elements*/
 .other-apps {
     text-align: center;
@@ -173,13 +179,14 @@ main h3 {
     height: 200px;
     width: 300px;
     border: 1px solid limegreen;
-    margin-right: 20px;
+    
+
 
 }
 
 /*container for contact section*/
 #contact-me {
-    height: 800px;
+    min-height: 800px;
     border-style: solid;
     border-color: limegreen;
     margin-top: 70px;
@@ -190,7 +197,7 @@ main h3 {
     justify-content: center;
     padding: 30px;
     height: min-content;
-    width: 500px;
+    max-width: 500px;
     text-align: center;
 }
 
@@ -263,3 +270,45 @@ button[type="submit"]:hover {
 }
 
     
+@media screen and (max-width: 1024px), (max-width: 968px) {
+    nav {
+        flex-direction: column;
+        height: auto;
+    }
+
+    body{
+        flex-direction: column;
+    }
+
+    #about-me img{
+        width:100%;
+        max-width: 250px;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 768px), (max-width: 480px) {
+    nav {
+        font-size: 15px;
+    }
+    #header {
+        font-size: 30px;
+    }
+
+    #about-me img {
+        width: 175px;
+        height: 275px;
+    }
+    
+    .first-app img {
+        width: 300px;
+        height: 200px;
+        align-items: center;
+    }
+
+    .other-apps img {
+        width: 250px;
+        height: 150px;
+    }
+    
+}
