syntax error fix on image folder

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,7 @@ header {
     padding-top: 100px;
     font-size: 50px;
     text-align: center;
-    background: url("./images/background.jpeg")
+    background: url("./Images/background.jpeg")
 
 }
 
